rename attributes for better readability
