# nexus/types/src/internal_api/params.rs
@@ -241,7 +241,7 @@ pub struct RackInitializationRequest {
     /// initial internal DNS config
     pub internal_dns_zone_config: dns_service_client::types::DnsConfigParams,
     /// The number of external qsfp ports per sidecar
-    pub sidecar_external_radix: u8,
+    pub external_port_count: u8,
 }
 
 pub type DnsConfigParams = dns_service_client::types::DnsConfigParams;
